2006-11-23  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sql-transaction/gda-sql-transaction-parser.c: don't print
	anything on stdout even if there is an error

2006-11-20  Bas Driessen <bas.driessen@xobas.com>

	* libgda/Makefile.am:
	* libgda/sql-transaction/Makefile.am: Change library
	libsqltransaction from a static to a shared type to allow
	compilation on non 32-bits architectures.

2006-11-19  Vivien Malerba <malerba@gnome-db.org>

	* providers/mysql/gda-mysql-provider.c:
	* providers/postgres/gda-postgres-provider.c: improved connection's 
	transaction status tracking
	* libgda/gda-connection.c:
	* doc/C/tmpl/gda-transaction-status.sgml: improved documentation
	* libgda/gda-server-provider.c: improved the supports_feature()
	function
	* doc/C: doc update

2006-11-18  Djihed Afifi  <djihed@gmail.com>
	
	* configure.in: Added Arabic.

2006-11-15  Vivien Malerba <malerba@gnome-db.org>

	* configure.in:
	* libgda/Makefile.am:
	* libgda/sql-transaction/*: new simple parser to recognize transaction
	operations SQL
	* libgda/gda-transaction-status.[ch]:
	* libgda/gda-connection.[ch]:
	* providers/sqlite/gda-sqlite-provider.c: improvements in the way the
	GdaConnection object copes with the transaction status
	* libgda/gda-client.[ch]: the name of the provider in
	gda_client_perform_create_database() and
	gda_client_perform_drop_database() is not required anymore

2006-11-12  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-value.c: handle timestamps that aren't fully compliant
	(Stian Skjelstad)
	* gda-mysql-provider.c: mysql 4.x GET_CONSTRAINTS support, mysql 5.x
	should now give full data on complex foreign keys (Stian Skjelstad)
	* libgda/gda-transaction-status-private.h:
	* libgda/gda-transaction-status.[ch]: new object to report on
	connection's current transaction status
	* libgda/gda-transaction.[ch]: removed obsolete object
	* libgda/gda-server-provider.[ch]:
	* libgda/gda-enums.h:
	* libgda/gda-client.[ch]:
	* libgda/gda-command.[ch]: